Fixed the header spacing issue
Fixed the header spacing issue for small screen mobile devices

--- a/EventPlanner/main.css
+++ b/EventPlanner/main.css
@@ -20,6 +20,9 @@ a {
     display: block;
 }
 h3 {
+/*    background-size: 40px;
+    padding-left: 50px;
+    background-position-y: -2px; */
     font-size: 32px;
 /*    margin: 0px; */
 }
@@ -88,14 +91,14 @@ h3 {
 }
 @media screen and (max-width: 840px) {
     .header .mdl-layout__header-row.titlebar {
-        height: 56px;
+        /*height: 56px; */
     }
     .titlebar h3 {
         font-size: 24px;
     }
     .titlebar h3 .material-icons {
         top: 2.5px;
-        font-size: 24px;
+        font-size: 23px;
     }
 }
 @media screen and (max-width: 479px) {
